--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -14,16 +14,18 @@ function makeTable() {
 }
 
 function blastSeq() {
- chr = kaj.GS('chr_blast') || 0;
- up = kaj.GS('upstream') || 0;
- down = kaj.GS('downstream') || 0;
- rc = kaj.GS('rc_blast');
- featid = kaj.GS('blast'); 
- dsid = kaj.GS('dsid_blast');
- featname = kaj.GS('featname_blast');
+ chr = $('#chr_blast').val() || 0;
+ up = $('#upstream').val() || 0;
+ down = $('#downstream').val() || 0;
+ rc = $('#rc_blast').val();
+ featid = $('#blast').val(); 
+ dsid = $('#dsid_blast').val();
+ featname = $('#featname_blast').val();
  if (featid) {
+ alert('CoGeBlast.pl?featid='+featid+'&upstream='+up+'&downstream='+down+'&dsid='+dsid+'&featname='+featname+'&rc='+rc,'window');
  window.open('CoGeBlast.pl?featid='+featid+'&upstream='+up+'&downstream='+down+'&dsid='+dsid+'&featname='+featname+'&rc='+rc,'window');}
  else {
+ alert('CoGeBlast.pl?chr='+chr+'&upstream='+up+'&downstream='+down+'&dsid='+dsid,'window');
  window.open('CoGeBlast.pl?chr='+chr+'&upstream='+up+'&downstream='+down+'&dsid='+dsid,'window');
  }
 }
@@ -38,7 +40,6 @@ function make_focus() {
 
 </SCRIPT>
 </TMPL_IF>
-
 <TMPL_IF NAME=BOTTOM_BUTTONS>
   <TABLE>
    <TR>
@@ -57,13 +58,13 @@ function make_focus() {
     </TD>
    </TR>
   </TABLE>
-</TMPL_IF>
+     <input type="hidden" id="blast" value="<TMPL_VAR NAME="BLAST">">
+    <input type="hidden" id="dsid_blast" value="<TMPL_VAR NAME="DSID_BLAST">">
+    <input type="hidden" id="featname_blast" value="<TMPL_VAR NAME="FEATNAME_BLAST">">
+    <input type="hidden" id="chr_blast" value="<TMPL_VAR NAME="CHR_BLAST">">
+    <input type="hidden" id="rc_blast" value="<TMPL_VAR NAME="RC_BLAST">">
 
-    <input type="hidden" id="blast" value="<TMPL_VAR NAME="FEATID">">
-    <input type="hidden" id="dsid_blast" value="<TMPL_VAR NAME="DSID">">
-    <input type="hidden" id="featname_blast" value="<TMPL_VAR NAME="FEATNAME">">
-    <input type="hidden" id="chr_blast" value="<TMPL_VAR NAME="CHR">">
-    <input type="hidden" id="rc_blast" value="<TMPL_VAR NAME="RC">">
+</TMPL_IF>
 
 <TMPL_IF NAME="ADDITION">
 <TABLE>
