--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -8,7 +8,7 @@
 </HEAD>
 <SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.js"></SCRIPT>
 <script language="JavaScript" type="text/javascript" src="/CoGe/js/menu.js"></script>
-<script src="/bpederse/gobe/jscss/swfobject.js" ></script>
+<!--<script src="/CoGe/gobe/js/swfobject.js" ></script>-->
 <SCRIPT language="JavaScript">
 function submitform() {
   document.main_form.submit();
@@ -124,15 +124,19 @@ setup();
 
  });
 
-var swfcallback = function(w,h,img_base,n_images){
-       var so = new SWFObject("/bpederse/gobe/src/gobe.swf", "gobe", w, h, "9", "#FFFFFF");
-       so.useExpressInstall('/bpederse/gobe/src/expressinstall.swf');
-       so.addVariable('n', n_images);
-       so.addVariable('imgdir', '/CoGe/tmp/');
-       so.addVariable('img', base );
-       so.write("flashdiv");
-}
 
+function handle_results (html,w, h, img_base, n_images) {
+
+ $('#results').html(html);
+// var so = new SWFObject("/bpederse/gobe/src/gobe.swf", "gobe", w, h, "9", "#FFFFFF");
+// so.useExpressInstall('/CoGe/flash/expressinstall.swf');
+// so.addVariable('n', n_images);
+// so.addVariable('imgdir', '/CoGe/tmp/');
+// so.addVariable('img', img_base );
+// so.write("flashdiv");
+ 
+
+}
 
 
 
