slight modification to handle_results, udpated function rset

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -32,7 +32,8 @@ $(".location").keyup(function(){
 <TMPL_VAR NAME="AUTOSEARCH">
 }
 
-function rset (num_seqs) {
+function rset () {
+var num_seqs = $("#num_seqs").val();
 $("#results").html(" ");
 
 for (var i =1; i<= num_seqs; i++)
@@ -126,12 +127,12 @@ setup();
 
 
 function handle_results (html,w, h, img_base, n_images) {
-
  $('#results').html(html);
  var so = new SWFObject("/CoGe/gobe/flash/gobe.swf", "gobe", w, h, "9", "#FFFFFF");
  so.useExpressInstall('/CoGe/gobe/flash/expressinstall.swf');
  so.addVariable('n', n_images);
- so.addVariable('base_url', '/CoGe/tmp/');
+ so.addVariable('base_url', '/CoGe/');
+ so.addVariable('tmp_dir', 'tmp/');
  so.addVariable('img', img_base );
  so.write("flashdiv");
  
@@ -147,7 +148,7 @@ function handle_results (html,w, h, img_base, n_images) {
 <td>
 <div id="go_button"><TMPL_VAR NAME="GO_BUTTON"></div>
 <td>
-<input type="button" value="Clear" onClick="rset(<TMPL_VAR NAME="NUM_SEQS">)">
+<input type="button" value="Clear" onClick="rset()">
 </table>
 <form>
 <table>
@@ -706,7 +707,7 @@ Number of sequences:
        <TD><input class="backbox" type="text" name="gblength<TMPL_VAR NAME="SEQ_NUM">" id="gblength<TMPL_VAR NAME="SEQ_NUM">" tabindex="1" size="10"  value="<TMPL_VAR NAME=GBLENGTH>"/>
       <TR>
        <TD colspan=2>
-       <font class="small">Reverse Complement: <label><input class="backbox" type="radio" name="gbrev<TMPL_VAR NAME="SEQ_NUM">" id="gbrev<TMPL_VAR NAME="SEQ_NUM">" tabindex="1" value="1" <TMPL_VAR NAME=REV_YES> />Yes</label><label><input class="backbox" type="radio" name="gbrev<TMPL_VAR NAME="SEQ_NUM">" id="gbrev<TMPL_VAR NAME="SEQ_NUM">" tabindex="1" value="0" <TMPL_VAR NAME=REV_NO> />No</label><BR></font>
+       <font class="small">Reverse Complement: <label><input class="backbox" type="radio" name="gbrev<TMPL_VAR NAME="SEQ_NUM">" id="gbrev<TMPL_VAR NAME="SEQ_NUM">" tabindex="1" value="1" <TMPL_VAR NAME=REV_YES> onclick="$('#gbstart<TMPL_VAR NAME="SEQ_NUM">').val(1)"/>Yes</label><label><input class="backbox" type="radio" name="gbrev<TMPL_VAR NAME="SEQ_NUM">" id="gbrev<TMPL_VAR NAME="SEQ_NUM">" tabindex="1" value="0" <TMPL_VAR NAME=REV_NO> />No</label><BR></font>
       </TABLE>
 
       </TMPL_LOOP>
